test/testData/highlight/errors/unbound/rec.ml
let x y = x y

(*
File "rec.ml", line 1, characters 10-11:
1 | let x y = x y;;
              ^
Error: Unbound value x
Hint: If this is a recursive definition,
you should add the 'rec' keyword on line 1
*)